# http-request

./: .gitignore  CMakeLists.txt  LICENSE  README.md  example.cpp
.github/workflows/: cmake.yml
cmake/: gtest.cmake
src/: CMakeLists.txt  PlainSocket.cpp  Request.cpp  SSLManager.cpp  Socket.cpp  TSLSocket.cpp  Url.cpp  Utility.cpp
src/include/: PlainSocket.h  SSLManager.h  Socket.h  TSLSocket.h  Url.h
src/include/public/: Data.hpp  HttpsHelper.h  Request.h  Type.h  Utility.h
test/: CMakeLists.txt  DataTest.cpp  Request.cpp  StringUtilTest.cpp  UrlParseTest.cpp
